# prog-dynamique

./: Makefile  pyproject.toml
source/: 01-fibonacci.rst  conf.py  introduction.rst  knapsack-dp.rst
source/scripts/kp_instances/: toy-instance
